--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,4 @@
-google=https://google.com
-hn=https://news.ycombinator.com
-reddit=https://reddit.com
-statsig=https://www.statsig.com
-worldclock=http://worldclockapi.com/api/json/utc/now
+website=https://www.keyban.io
+admin=https://admin.keyban.io
+docs=https://docs.keyban.io
+loyalty=https://demo.loyalty.keyban.io
