--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -4,6 +4,7 @@ name: Scheduled Health Check
 on:
   schedule:
     - cron: "*/5 * * * *"
+  workflow_dispatch: # Permet de déclencher manuellement
 
 jobs:
   health_check_job:
